--- a/app/basicUIPagesStyle.css
+++ b/app/basicUIPagesStyle.css
@@ -106,7 +106,7 @@ https://docs.google.com/presentation/d/1-_FpFF140Xc9qONxjbvTLqgxU9JljpNpbkdHH8wj
     border-style: solid;
     border-color:#074EE8;
     color:white;
-    font-family: 'Patrick Hand';
+    font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -242,7 +242,7 @@ https://docs.google.com/presentation/d/1-_FpFF140Xc9qONxjbvTLqgxU9JljpNpbkdHH8wj
     border-style: solid;
     border-color:#074EE8;
     color:white;
-    font-family: 'Patrick Hand';
+    font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 50px;
@@ -266,7 +266,7 @@ https://docs.google.com/presentation/d/1-_FpFF140Xc9qONxjbvTLqgxU9JljpNpbkdHH8wj
     border-style: solid;
     border-color:#074EE8;
     color:white;
-    font-family: 'Patrick Hand';
+    font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 50px;
@@ -290,7 +290,7 @@ https://docs.google.com/presentation/d/1-_FpFF140Xc9qONxjbvTLqgxU9JljpNpbkdHH8wj
     border-style: solid;
     border-color:#ffffff;
     color:#3771E0;
-    font-family: 'Patrick Hand';
+    font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 50px;
@@ -303,4 +303,96 @@ https://docs.google.com/presentation/d/1-_FpFF140Xc9qONxjbvTLqgxU9JljpNpbkdHH8wj
     top: 350px;
     width: 1080px;
     height: 1080px;
+}
+
+
+/*Style for hrResults page */
+#x{
+    top: 80px;
+    left: 70px;
+}
+
+#xText{
+    top: 38px;
+    left: 120px;
+    position: absolute;
+    width: 450px;
+    height: 26px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 26px;
+    color: #000000;
+}
+#boxResults{
+    box-sizing: border-box;
+    position: absolute;
+    width: 900px;
+    height: 500px;
+    left: 70px;
+    top: 150px;
+    background: #FFFFFF;
+    border: 4px solid #3771E0;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;;
+}
+
+#resultsTopText{
+    position: absolute;
+    width: 250px;
+    height: 26px;
+    left: 320px;
+    top: 80px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 26px;
+    text-align: center;
+    color: #000000;
+}
+
+#resultsMiddleText{
+    position: absolute;
+    width: 250px;
+    height: 30px;
+    left: 310px;
+    top: 110px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 90px;
+    line-height: 26px;
+    text-align: center;
+    color: #074EE8;
+}
+
+#resultsBottomText{
+    position: absolute;
+    width: 400px;
+    height: 26px;
+    left: 240px;
+    top: 370px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 26px;    
+    text-align: center;
+    color: #000000;
+}
+
+#resultsInfoText{
+    position: absolute;
+    width: 1000px;
+    height: 100px;
+    left: 80px;
+    top: 700px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 60px;
+    color: #000000;
 }
