--- a/app/measurement.css
+++ b/app/measurement.css
@@ -1,10 +1,177 @@
+/*Style for Heart Rate Measurement Page*/
+
 #measurementCanvas {
-  width: 100%;
-  height: 800px;
-  left: 0px;
-  top: 400px;
+  width: 355px;
+  height: 499px;
+  margin-left: -10px;
+  margin-top: 207px;
+  margin-bottom: -1px;
 }
 
-#content {
-  padding: 0;
+#hrBPMDisplay{
+  margin-top: 175px;
+  position: absolute;
+
 }
+
+#progressBox{
+  box-sizing: border-box;
+
+  position: absolute;
+  width: 300px;
+  height: 150px;
+  left: 24px;
+  top: 55px;
+
+  background: #FFFFFF;
+  border: 2px solid #3771E0;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;;
+}
+
+
+
+
+
+/*Help Menu CSS*/
+.popup .overlay{
+  position: fixed;
+  top : 240px;
+  left: 0px;
+  width: 355px;
+  height: 499px;
+  background: rgba(109, 109, 109, 0.7);
+  z-index: 1;
+  display: none; 
+}
+
+.popup .content{
+  position: absolute;
+  left: 170px;
+  top: 475px;
+  transform: translate(-50%, -50%) scale(0);
+  background: rgb(255, 255, 255);
+  width: 260px;
+  height: 350px;
+  border: 2px solid #3771E0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  z-index:2;
+  text-align: center;
+  padding:20px;
+  box-sizing: border-box;
+}
+
+.popup .close-btn{
+  cursor:pointer;
+  position:absolute;
+  right:20px;
+  top:10px;
+  width: 30px;
+  height: 30px;
+  background:rgb(255, 255, 255);
+  color:#fff;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.popup.active .overlay{
+  display: block;
+}
+
+.popup.active .content{
+  transition: all 300ms ease-in-out;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+#buttonHelp{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 12px;
+  margin-top: -17px;
+  margin-left: 290px;
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  background: #ffffff;
+  border-radius: 4px;
+  border-style: solid;
+  border-color:#ffffff;
+  color:#3771E0;
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 18px;
+}
+
+#xHelp{
+  margin-top: 0px;
+  margin-left: 10px;
+}
+
+#questionMark{
+  margin-left: -210px;
+  margin-top: -10px;
+}
+
+#helpTitle{
+  position: absolute;
+  width: 87px;
+  height: 37px;
+  font-size: 22px;
+  font-family: 'IBM Plex Sans';
+  margin-left: 5px;
+  margin-top: -32px;
+  
+}
+
+#helpTextTopLight{
+  position: absolute;
+  width: 200px;
+  height: 366px;
+  left: -40px;
+  top: 65px;
+  font-size: 19px;
+  font-family: 'IBM Plex Sans';
+
+}
+#helpTextTopMidLight{
+  position: absolute;
+  width: 200px;
+  font-size: 18px;
+  font-family: 'IBM Plex Sans';
+  line-height: 22px;
+  height: 366px;
+  left: 2px;
+  top: 90px;
+
+}
+
+#helpTextTopHold{
+  position: absolute;
+  width: 200px;
+  height: 366px;
+  left: -40px;
+  top: 200px;
+  font-size: 19px;
+  font-family: 'IBM Plex Sans';
+
+}
+#helpTextTopMidHold{
+  position: absolute;
+  width: 250px;
+  height: 366px;
+  left: -22px;
+  top: 225px;
+  font-size: 18px;
+  font-family: 'IBM Plex Sans';
+  line-height: 22px;
+
+}
+
