--- a/app/measurement.css
+++ b/app/measurement.css
@@ -1,11 +1,11 @@
 /*Style for Heart Rate Measurement Page*/
 
 #measurementCanvas {
-  width: 355px;
-  height: 499px;
+  width: 400px;
+  height: 480px;
   margin-left: -10px;
   margin-top: 207px;
-  margin-bottom: -1px;
+
 }
 
 #hrBPMDisplay{
@@ -18,9 +18,9 @@
   box-sizing: border-box;
 
   position: absolute;
-  width: 300px;
-  height: 150px;
-  left: 24px;
+  width: 362px;
+  height: 136px;
+  left: 15px;
   top: 55px;
 
   background: #FFFFFF;
@@ -29,17 +29,46 @@
   border-radius: 10px;;
 }
 
+/*Changing Messages Style in the Progress Bar*/
+.firstMessage{
+  
+  width: 250px;
+  height: 78px;
+  /*left: 115px;
+  top: 87px;*/
+  position: absolute;
+
+  display: flex; /* establish flex container */
+  flex-direction: column; /* make main-axis vertical */
+  justify-content: center; /* align items vertically, in this case */
+  align-items: center; /* align items horizontally, in this case */
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  left: 115px;
+  top: 87px;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+
+  color: #000000;
+}
 
 
 
 
 /*Help Menu CSS*/
 .popup .overlay{
-  position: fixed;
+  position: absolute;
+  /*
   top : 240px;
   left: 0px;
   width: 355px;
-  height: 499px;
+  height: 499px;*/
+  width: 400px;
+  height: 480px;
+  margin-left: -10px;
+  margin-top: 207px;
   background: rgba(109, 109, 109, 0.7);
   z-index: 1;
   display: none; 
@@ -47,7 +76,7 @@
 
 .popup .content{
   position: absolute;
-  left: 170px;
+  left: 200px;
   top: 475px;
   transform: translate(-50%, -50%) scale(0);
   background: rgb(255, 255, 255);
@@ -94,7 +123,7 @@
   align-items: center;
   padding: 0px 12px;
   margin-top: -17px;
-  margin-left: 290px;
+  margin-left: 330px;
   position: absolute;
   width: 0px;
   height: 0px;
@@ -135,7 +164,7 @@
   position: absolute;
   width: 200px;
   height: 366px;
-  left: -40px;
+  left: -35px;
   top: 65px;
   font-size: 19px;
   font-family: 'IBM Plex Sans';
@@ -148,7 +177,7 @@
   font-family: 'IBM Plex Sans';
   line-height: 22px;
   height: 366px;
-  left: 2px;
+  left: 12px;
   top: 90px;
 
 }
@@ -157,7 +186,7 @@
   position: absolute;
   width: 200px;
   height: 366px;
-  left: -40px;
+  left: -30px;
   top: 200px;
   font-size: 19px;
   font-family: 'IBM Plex Sans';
@@ -165,9 +194,9 @@
 }
 #helpTextTopMidHold{
   position: absolute;
-  width: 250px;
+  width: 260px;
   height: 366px;
-  left: -22px;
+  left: -12px;
   top: 225px;
   font-size: 18px;
   font-family: 'IBM Plex Sans';
@@ -175,3 +204,80 @@
 
 }
 
+
+/*Progress Bar Style*/
+
+.skill{
+  width: 100px;
+  height: 100px;
+  position: relative;
+}
+
+
+.outer{
+  margin-top: 6px;
+  margin-left: 26px;
+  position: absolute; 
+  height: 69px;
+  width: 69px;
+  border-radius: 50%;
+  box-shadow:  6px 6px 10px -1px rgba(0,0,0,0.15),
+  -6px -6px 10px -1px rgba(255,255,255,0.7);
+ 
+}
+
+.inner{
+  margin-top:  25px;
+  margin-left: 20px;
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+ 
+  
+  box-shadow: inset 4px 4px 6px -1px rgba(0,0,0,0.2),
+  inset -4px -4px 6px -1px rgba(255,255,255,0.7),
+  -0.5px -0.5px 0px  rgba(255,255,255,1),
+  0.5px 0.5px 0px  rgba(0,0,0,0.15),
+  0px 12px 10px -10px rgba(0,0,0,0.05);
+  /*border: 1px solid red;*/
+}
+
+#number{
+  margin-top: -49px; /*CHANGEs*/
+  margin-left: 40px;
+  font-weight: 600;
+  color: rgb(0, 0, 0);
+}
+
+circle{
+  fill: none; /*Can add colors*/
+  /*stroke: cornflowerblue; Outline*/
+
+  stroke: #074EE8;
+  stroke-width: 5px;
+  stroke-dasharray: 295; /*percent shaded, 472 = complete circle*/
+  stroke-dashoffset: 300; /*hides certain percent*/
+  animation: anim 30s linear forwards;
+}
+
+
+svg{
+  position: absolute;
+  top: -35.5px;
+  left: -13.5px;
+  transform: rotate(-90deg);
+}
+
+/*algorithm for proper % covered: 472 (or stroke-dasharray till
+covered completly) - 472(0.%)*/
+@keyframes anim{
+  100%{
+      stroke-dashoffset: 65;
+  }
+}
+
+
+/*
+stop{
+  stop-color: #074EE8; /*#2EAF26 <-- green color to switch
+} */
