--- a/app/measurement.css
+++ b/app/measurement.css
@@ -30,8 +30,55 @@
 }
 
 /*Changing Messages Style in the Progress Bar*/
-.firstMessage{
+#firstMessage{
   
+  width: 250px;
+  height: 78px;
+  margin-left:5px;
+  
+  position: absolute;
+
+  display: flex; /* establish flex container */
+  flex-direction: column; /* make main-axis vertical */
+  justify-content: center; /* align items vertically, in this case */
+  align-items: center; /* align items horizontally, in this case */
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  left: 115px;
+  top: 80px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
+  text-align: center;
+
+  color: #000000;
+}
+
+#secondMessage{
+  
+  width: 250px;
+  height: 78px;
+  margin-left: -500px;
+
+  position: absolute;
+
+  display: flex; /* establish flex container */
+  flex-direction: column; /* make main-axis vertical */
+  justify-content: center; /* align items vertically, in this case */
+  align-items: center; /* align items horizontally, in this case */
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  left: 115px;
+  top: 85px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
+  text-align: center;
+
+  color: #000000;
+}
+#thirdMessage{
+  margin-left: -500px;
   width: 250px;
   height: 78px;
   /*left: 115px;
@@ -45,15 +92,35 @@
   font-family: 'IBM Plex Sans';
   font-style: normal;
   left: 115px;
-  top: 87px;
+  top: 84px;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 26px;
   text-align: center;
 
   color: #000000;
 }
+#fourthMessage{
+  margin-left: -500px;
+  width: 350px;
+  height: 70px;
+  position: absolute;
 
+  display: flex; /* establish flex container */
+  flex-direction: column; /* make main-axis vertical */
+  justify-content: center; /* align items vertically, in this case */
+  align-items: center; /* align items horizontally, in this case */
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  left: 115px;
+  top: 87px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+
+  color: #000000;
+}
 
 
 
@@ -252,7 +319,6 @@
 #circleFiller{
   fill: none; /*Can add colors*/
   /*stroke: cornflowerblue; Outline*/
-
   stroke: #074EE8; /*#074EE8;*/
   stroke-width: 5px;
   stroke-dasharray: 295; /*percent shaded, 472 = complete circle*/
@@ -278,11 +344,11 @@ covered completly) - 472(0.%)*/
 
 
 #yllwQMark{
-  margin-top: 30px;
+  margin-top: 45px;
   margin-left: -500px;
   position:absolute;
-  width: 70px;
-  height:70px;
+  width: 40px;
+  height:45px;
 }
 
 /*
