--- a/app/basicUIPagesStyle.css
+++ b/app/basicUIPagesStyle.css
@@ -26,14 +26,14 @@ https://docs.google.com/presentation/d/1-_FpFF140Xc9qONxjbvTLqgxU9JljpNpbkdHH8wj
     position: absolute;
     width: 850px;
     height: 250px;
-    left: 80px;
+    left: 74px;
     right: 115px;
     top: 200px; 
     font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 50px;
-    line-height: 50px;
+    line-height: 55px;
     /* or 130% */
     text-align: center;
     color: #000000;
@@ -43,45 +43,45 @@ https://docs.google.com/presentation/d/1-_FpFF140Xc9qONxjbvTLqgxU9JljpNpbkdHH8wj
     box-sizing: border-box;
     position: absolute;
     width: 850px;
-    height: 350px;
+    height: 430px;
     left: 70px;
     top: 500px;
     background: #FFFFFF;
-    border: 1px solid #3771E0;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: 3px solid #3771E0;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
     }
     
     #box2{
     box-sizing: border-box;
     position: absolute;
     width: 850px;
-    height: 350px;
+    height: 430px;
     left: 70px;
-    top: 1000px;
+    top: 1050px;
     background: #FFFFFF;
-    border: 1px solid #3771E0;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
+    border: 3px solid #3771E0;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
     }
 
 
 #top{
     position: absolute;
-    margin-left: 17px;
-    margin-top:25px; 
+    margin-left: 40px;
+    margin-top:50px; 
     font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 500;
-    font-size: 40px;
+    font-size: 50px;
     line-height: 26px;
     color: #000000;
     }
     
     #middle{
     position: absolute;
-    top: 100px;
-    left: 17px;
+    top: 140px;
+    left: 40px;
     font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 400;
@@ -98,12 +98,12 @@ https://docs.google.com/presentation/d/1-_FpFF140Xc9qONxjbvTLqgxU9JljpNpbkdHH8wj
     padding: 0px 12px;
     gap: 6px;
     position: absolute;
-    width: 320px;
+    width: 365px;
     height: 80px;
-    left: 480px;
-    top: 240px;    
+    left: 430px;
+    top: 280px;    
     background: #074EE8;
-    border-radius: 4px;
+    border-radius: 10px;
     border-style: solid;
     border-color:#074EE8;
     color:white;
@@ -150,50 +150,62 @@ a:link, a:visited {
     box-sizing: border-box;
     position: absolute;
     width: 900px;
-    height: 200px;
+    height: 330px;
     left: 40px;
-    top: 80px;
+    top: 90px;
     background: #FFFFFF;
-    border: 1px solid #3771E0;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;;
+    border: 3px solid #3771E0;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
 }
 #boxPg2{
     box-sizing: border-box;
     position: absolute;
     width: 900px;
-    height: 200px;
-    left: 90px;
-    top: 80px;
+    height: 330px;
+    left: 60px;
+    top: 90px;
     background: #FFFFFF;
-    border: 1px solid #3771E0;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;;
+    border: 3px solid #3771E0;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+}
+#boxPg3{
+    box-sizing: border-box;
+    position: absolute;
+    width: 950px;
+    height: 330px;
+    left: 60px;
+    top: 90px;
+    background: #FFFFFF;
+    border: 3px solid #3771E0;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
 }
 
 #boxPgGif{
     box-sizing: border-box;
     position: absolute;
-    width: 900px;
-    height: 200px;
-    left: 90px;
+    width: 950px;
+    height: 350px;
+    left: 70px;
     top: 90px;
     background: #FFFFFF;
-    border: 1px solid #3771E0;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;;
+    border: 3px solid #3771E0;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
 }
 #boxText1{
     position: absolute;
     height: 90px;
     left: 37px;
     right: 37px;
-    top: 29px;
+    top: 50px;
     font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 400;
-    font-size: 40px;
-    line-height: 50px;
+    font-size: 55px;
+    line-height: 65px;
     text-align: center;
     color: #000000;
 }
@@ -202,12 +214,12 @@ a:link, a:visited {
     height: 90px;
     left: 37px;
     right: 37px;
-    top: 20px;
+    top: 50px;
     font-family: 'IBM Plex Sans';
     font-style: normal;
-    font-weight: 400;
-    font-size: 45px;
-    line-height: 50px;
+    font-weight: 500;
+    font-size: 55px;
+    line-height: 65px;
     text-align: center;
     color: #000000;
 }
@@ -219,23 +231,37 @@ a:link, a:visited {
     top: 35px;
     font-family: 'IBM Plex Sans';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 55px;
-    line-height: 60px;
+    line-height: 65px;
+    text-align: center;
+    color: #000000; 
+}
+
+#boxTextGif{
+    position: absolute;
+    height: 90px;
+    left: 37px;
+    right: 37px;
+    top: 50px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 60px;
+    line-height: 75px;
     text-align: center;
     color: #000000;
 }
-
 #hrpg1Image{
     position: absolute;
-    left: 25px;
-    top: 270px;
+    left: 50px;
+    top: 400px;
 }
 #hrpg2Image{
     position: absolute;
     right: 0px;
     left: 0px;
-    top: 350px;
+    top: 500px;
 }
 
 
@@ -247,12 +273,12 @@ a:link, a:visited {
     padding: 0px 12px;
     gap: 6px;
     position: absolute;
-    width: 200px;
-    height: 80px;
+    width: 230px;
+    height: 110px;
     left: 650px;
-    top: 1450px;   
+    top: 1550px;   
     background: #074EE8;
-    border-radius: 4px;
+    border-radius: 10px;
     border-style: solid;
     border-color:#074EE8;
     color:white;
@@ -271,12 +297,12 @@ a:link, a:visited {
     padding: 0px 12px;
     gap: 6px;
     position: absolute;
-    width: 460px;
-    height: 80px;
-    left: 500px;
-    top: 1450px;   
+    width: 500px;
+    height: 100px;
+    left: 440px;
+    top: 1550px;   
     background: #074EE8;
-    border-radius: 4px;
+    border-radius: 10px;
     border-style: solid;
     border-color:#074EE8;
     color:white;
@@ -294,13 +320,13 @@ a:link, a:visited {
     align-items: center;
     padding: 0px 12px;
     gap: 6px;
-    margin-top: 1450px;
+    margin-top: 1550px;
     margin-left: 25px;
     position: absolute;
-    width: 200px;
-    height: 80px;
+    width: 230px;
+    height: 110px;
     background: #ffffff;
-    border-radius: 4px;
+    border-radius: 10px;
     border-style: solid;
     border-color:#ffffff;
     color:#3771E0;
@@ -314,7 +340,7 @@ a:link, a:visited {
 #gif{
     position: absolute;
     left: 0px;
-    top: 350px;
+    top: 500px;
     width: 1080px;
     height: 1080px;
 }
@@ -328,7 +354,7 @@ a:link, a:visited {
 
 #xText{
     top: 17px;
-    left: 50px;
+    left: 55px;
     position: absolute;
     width: 450px;
     height: 26px;
@@ -343,15 +369,14 @@ a:link, a:visited {
 #boxResults{
     box-sizing: border-box;
     position: absolute;
-    position: absolute;
     width: 362px;
-    height: 235px;
+    height: 270px;
     left: 15px;
     top: 80px;
     background: #FFFFFF;
-    border: 4px solid #3771E0;
+    border: 3px solid #3771E0;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;;
+    border-radius: 10px;
 }
 
 #resultsTopText{
@@ -363,7 +388,7 @@ a:link, a:visited {
     font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 500;
-    font-size: 25px;
+    font-size: 30px;
     line-height: 26px;
     text-align: center;
     color: #000000;
@@ -389,12 +414,12 @@ a:link, a:visited {
     width: 400px;
     height: 26px;
     left: -27px;
-    top: 170px;
+    top: 190px;
     font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
-    line-height: 26px;    
+    font-size: 30px;
+    line-height: 31px;    
     text-align: center;
     color: #000000;
 }
@@ -404,12 +429,12 @@ a:link, a:visited {
     width: 1000px;
     height: 100px;
     left: 20px;
-    top: 350px;
+    top: 375px;
     font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
-    line-height: 25px;
+    line-height: 30px;
     color: #000000;
 }
 
