--- a/app/rrbasicUIPagesStyle.css
+++ b/app/rrbasicUIPagesStyle.css
@@ -10,6 +10,41 @@
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
 }
+#boxPg4{
+    box-sizing: border-box;
+    position: absolute;
+    width: 900px;
+    height: 330px;
+    left: 40px;
+    top: 90px;
+    background: #FFFFFF;
+    border: 3px solid #3771E0;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+}
+#buttonMeasurements{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 12px;
+    gap: 6px;
+    position: absolute;
+    width: 500px;
+    height: 100px;
+    left: 420px;
+    top: 1550px;   
+    background: #074EE8;
+    border-radius: 10px;
+    border-style: solid;
+    border-color:#074EE8;
+    color:white;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 18px;
+}
 
 #boxText1{
     position: absolute;
@@ -112,9 +147,7 @@
 }
 
 #rrGifImg{
-    position: absolute;
-    height: 500px;
-    width: 500px; 
-    top: 800px;
-    left: 300px;
+    position: absolute; 
+    top: 500px;
+    left: 40px;
 }
