--- a/app/style.css
+++ b/app/style.css
@@ -29,7 +29,7 @@
   border: 15px solid blue;
   padding: 50px;
   margin:20px;
- +/* height: 50px;
+ /* height: 50px;
   width: 150px;
   border: 15px solid black;*/
 }
