--- a/app/rrMeasurement.css
+++ b/app/rrMeasurement.css
@@ -1,14 +1,90 @@
 #videoFeed{
     margin-left: -10px;
-    margin-top: 207px;
+    margin-top: 307px;
+}
+#rectangle{
+  position: absolute;
+  width: 400px;
+  height: 550px;
+  background:  rgba(109, 109, 109, 0.6);
+  margin-left: -10px;
+  margin-top: 180px;
+}
+#topBox{
+    box-sizing: border-box;
+    position: absolute;
+    width: 362px;
+    height: 136px;
+    left:18px;
+    top: 50px;
+    background: #FFFFFF;
+    border: 1px solid #3771E0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+#positionMsg{
+    position: absolute;
+    width: 289px;
+    height: 78px;
+    left: 80px;
+    top: 30px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    text-align: center;
+    color: #000000;
 }
 
+#detectingMsg{
+    position: absolute;
+    width: 250px;
+    height: 78px;
+    left: 100px;
+    top: 30px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 26px;
+    text-align: center;
+    color: #000000;
+}
+
+#doneMsg{
+    position: absolute;
+    width: 250px;
+    height: 26px;
+    left: 100px;
+    top: 50px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 26px;
+    text-align: center;
+    color: #000000;
+}
+#helpMsg{
+    position: absolute;
+    width: 250px;
+    height: 104px;
+    left: 70px;
+    top: 20px;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 26px;
+    color: #000000;
+}
 
 /*Help Menu CSS*/
 
 #yllwQMark{
     margin-top: 45px;
-    margin-left: -500px;
+    margin-left: 20px;
     position:absolute;
     width: 40px;
     height:45px;
@@ -28,7 +104,7 @@
     width: 400px;
     height: 550px;
     margin-left: -10px;
-    margin-top: 207px;
+    margin-top: 307px;
     background: rgba(109, 109, 109, 0.7);
     z-index: 1;
     display: none; 
@@ -77,13 +153,10 @@
   }
   
   #buttonHelp{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
     padding: 0px 12px;
-    margin-top: -17px;
-    margin-left: 330px;
+    top: 17px;
+    left: 310px;
     position: absolute;
     width: 0px;
     height: 0px;
