--- a/app/rrbasicUIPagesStyle.css
+++ b/app/rrbasicUIPagesStyle.css
@@ -4,7 +4,7 @@
     width: 900px;
     height: 330px;
     left: 90px;
-    top: 90px;
+    top: 110px;
     background: #FFFFFF;
     border: 3px solid #3771E0;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
@@ -16,7 +16,7 @@
     width: 900px;
     height: 330px;
     left: 40px;
-    top: 90px;
+    top: 110px;
     background: #FFFFFF;
     border: 3px solid #3771E0;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
@@ -33,7 +33,7 @@
     width: 500px;
     height: 100px;
     left: 420px;
-    top: 1550px;   
+    top: 1470px;   
     background: #074EE8;
     border-radius: 10px;
     border-style: solid;
@@ -149,7 +149,7 @@
 #rrGifImg{
     position: absolute; 
     top: 500px;
-    left: 40px;
+    left: 90px;
 }
 
 
@@ -243,4 +243,28 @@
     font-size: 20px;
     line-height: 30px;
     color: #000000;
+}
+
+#buttonCancelPg4{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 12px;
+    gap: 6px;
+    margin-top: 1470px;   
+    margin-left: 25px;
+    position: absolute;
+    width: 230px;
+    height: 110px;
+    background: #ffffff;
+    border-radius: 10px;
+    border-style: solid;
+    border-color:#ffffff;
+    color:#3771E0;
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 18px;
 }
